// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInfiniteScroll renders an empty list for the first render 1`] = `
<div>
  <div
    id="list"
  />
  <div
    className="bpk-sentinel"
  />
</div>
`;

exports[`withInfiniteScroll renders items after the first render 1`] = `
<WithInfiniteScroll
  elementsPerScroll={5}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
          "Element 1",
          "Element 2",
          "Element 3",
          "Element 4",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
        <div
          key="Element 1"
        >
          Element 1
        </div>
        <div
          key="Element 2"
        >
          Element 2
        </div>
        <div
          key="Element 3"
        >
          Element 3
        </div>
        <div
          key="Element 4"
        >
          Element 4
        </div>
      </div>
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should pass extra props to the decorated component 1`] = `
<WithInfiniteScroll
  aria-label="Test"
  elementsPerScroll={5}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      aria-label="Test"
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly when no more elements 1`] = `
<WithInfiniteScroll
  elementsPerScroll={5}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
          "Element 1",
          "Element 2",
          "Element 3",
          "Element 4",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
        <div
          key="Element 1"
        >
          Element 1
        </div>
        <div
          key="Element 2"
        >
          Element 2
        </div>
        <div
          key="Element 3"
        >
          Element 3
        </div>
        <div
          key="Element 4"
        >
          Element 4
        </div>
      </div>
    </List>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with a "renderLoadingComponent" attribute 1`] = `
<WithInfiniteScroll
  elementsPerScroll={5}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={[Function]}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className={null}
    >
      <span>
        Loading
      </span>
    </div>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with a "renderSeeMoreComponent" attribute 1`] = `
<WithInfiniteScroll
  elementsPerScroll={1}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={[Function]}
  seeMoreAfter={0}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
      </div>
    </List>
    <button
      onClick={[Function]}
    >
      see more
    </button>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with an "elementsPerScroll" attribute 1`] = `
<WithInfiniteScroll
  elementsPerScroll={1}
  onItemsFetch={[Function]}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
      </div>
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;
